# rust-course-geektime

./: Cargo.toml
01_stack_heap/: Cargo.toml
01_stack_heap/src/: error.rs  pointer.rs
02_concepts/: Cargo.toml
02_concepts/src/: shape.rs
03_grammar/: Cargo.toml
03_grammar/src/: event.rs  fib.rs  lib.rs  scrape_url.rs  scrape_url_args.rs  scrape_url_with_error_handling.rs
04_httpie/: Cargo.toml
04_httpie/src/: main.rs
05_thumbor/: Cargo.toml  build.rs
05_thumbor/src/: main.rs
05_thumbor/src/engine/: mod.rs  photon.rs
05_thumbor/src/pb/: mod.rs
06_queryer/: Cargo.toml
06_queryer/examples/: covid.rs  dialect.rs
06_queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
07_ownership/: Cargo.toml
07_ownership/src/: check_copy.rs  inner_mut.rs  lifetime.rs  memory.rs  multi_owner.rs  reference.rs
08_type_system/: Cargo.toml
08_type_system/src/: trait_add.rs  trait_convert.rs  trait_deref.rs  trait_dispatch.rs  trait_parse.rs  trait_write.rs  type_derivation.rs
09_data_struct/: Cargo.toml
09_data_struct/src/: allocator.rs  btreemap.rs  closure.rs  cow.rs  hashmap.rs  mutexguard.rs  mystring.rs
10_kv/: Cargo.toml
10_kv/src/: lib.rs
10_kv/src/pb/: mod.rs
10_kv/src/service/: mod.rs
10_kv/src/storage/: memory.rs
11_network/: Cargo.toml
11_network/examples/: listener.rs
