[package]
name = "data_struct"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "allocator"
path = "src/allocator.rs"

[[bin]]
name = "cow"
path = "src/cow.rs"

[[bin]]
name = "mutexguard"
path = "src/mutexguard.rs"

[[bin]]
name = "mystring"
path = "src/mystring.rs"

[[bin]]
name = "hashmap"
path = "src/hashmap.rs"

[[bin]]
name = "btreemap"
path = "src/btreemap.rs"

[[bin]]
name = "closure"
path = "src/closure.rs"

[dependencies]
url = "2"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1"
